# agente-python

./: .env.example  .gitignore  README.md  pyproject.toml  siap-deepseek.md
cnpjscan/: __init__.py  classifier.py  cli.py  fixer.py  llm.py  models.py  patterns.py  report.py  scanner.py
examples/: 2024_01_01_create_empresas_table.php  cnpj-mask.component.ts  legacy_cnpj.php
tests/: conftest.py  test_classifier.py  test_cli.py  test_fixer.py  test_llm.py  test_patterns.py  test_report.py  test_scanner.py
