[project]
name = "cnpj-alfa-scanner"
version = "0.2.0"
description = "Agente que varre um codebase em busca de suposicoes de que CNPJ e' so' numero, que quebram com o CNPJ alfanumerico (IN RFB 2.229/2024)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
cnpjscan = "cnpjscan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cnpjscan"]
