[project]
name = "cnpj-alfa-scanner"
version = "0.2.0"
description = "Agente que varre um codebase em busca de suposicoes de que CNPJ e' so' numero, que quebram com o CNPJ alfanumerico (IN RFB 2.229/2024)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
cnpjscan = "cnpjscan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cnpjscan"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # comprimento de linha e' controlado pelo formatador

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
